2012-10-23  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/internal/wrap.h: new function module_wrap used internally by modules
        * include/Rcpp/module/Module_generated_CppMethod.h: using module_wrap and
        simplified the code (removing 35% of the generated code now rendered useless)
        * include/Rcpp/module/Module_generated_PointerCppMethod.h: using module_wrap and
        simplified the code
        * include/Rcpp/traits/module_wrap_traits.h : new file. helping implementation of 
        module_wrap
        
        * R/00_classes.R: C++OverloadedMethods gets the field "nargs" to capture
        the number of arguments
        
        * R/01_show.R: cleanup
        
        * R/Module.R: handle the case where a method has no argument. In that 
        case, the ellipsis does not end up in the formals
        
        * include/Rcpp/Module.h: exposing nargs in C++OverloadedMethods

2012-10-22  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/as.h: support for as<> for module objects
        * include/Rcpp/Module.h: idem
        * include/Rcpp/traits/r_type_traits.h: idem
        * src/Module.cpp: idem

2012-10-21  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/traits/wrap_type_traits.h: support for wrapping module objects
        * include/Rcpp/internal/wrap.h : idem
        * include/Rcpp/Module.h: idem

2012-10-13  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.9.15
        * inst/NEWS: Release 0.9.15
        * inst/include/Rcpp/config.h: Release 0.9.15
        * debian/*: Similarly updated for new release to Debian

2012-10-08  Dirk Eddelbuettel  <edd@debian.org>

	* src/exceptions.cpp: Additional PROTECT for parsing exception
	messages before returning them to R, from a suggestion by Ben North

2012-10-07  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runit.Date.R: Added a few more tests

2012-10-06  Dirk Eddelbuettel  <edd@debian.org>
